# draft-ietf-coap-eap-proof-of-concept

./: README.md
coap-eap-controller/: Makefile  config.status  configure
coap-eap-controller/autom4te.cache/: output.0  requests  traces.0  traces.1
coap-eap-controller/src/: Makefile  Makefile.am  Makefile.in  mainserver.cpp
coap-eap-controller/src/cantcoap-master/: cantcoap.cpp  cantcoap.h  test
coap-eap-controller/src/libeapstack/: Makefile
coap-eap-controller/src/state_machines/: coap_eap_session.c  coap_eap_session.h  coap_eap_statemachine.c  coap_eap_statemachine.h
contiki/apps/er-coap-13/: er-coap-13.c  er-coap-13.h
contiki/examples/er-rest-coap-eap/: Makefile  er-coap-eap.c  er-coap-eap.csc
freeradius-2.0.2-psk/freeradius-server-2.0.2/: Make.inc.in  Makefile  configure.in
freeradius-2.0.2-psk/freeradius-server-2.0.2/dialup_admin/: Makefile
freeradius-2.0.2-psk/freeradius-server-2.0.2/doc/: ChangeLog  Makefile  README  aaa.txt  ascend  bugs  load-balance.txt  rlm_sim_triplets  variables.txt
freeradius-2.0.2-psk/freeradius-server-2.0.2/raddb/: attrs  radiusd.conf.in
freeradius-2.0.2-psk/freeradius-server-2.0.2/scripts/: Makefile  clients.pl  cryptpasswd.in  exec-program-wait  min-includes.pl  radsqlrelay
freeradius-2.0.2-psk/freeradius-server-2.0.2/share/: Makefile  attrnew.pl  attrsort.pl  backref.pl  dictionary  dictionary.3com  dictionary.3gpp  dictionary.3gpp2  dictionary.airespace  dictionary.alcatel  dictionary.alteon  dictionary.altiga  dictionary.asn  (+76 more)
freeradius-2.0.2-psk/freeradius_mod_files/: Makefile
setup scripts/: coap-eap.sh
(+350 files in other folders)
